6. Solucionando bugs de scroll x, agregando scroll a tables, creando footer + css

--- a/style.css
+++ b/style.css
@@ -141,6 +141,14 @@ main{
     line-height: 1.8rem;
     color:  #757575;
 }
+.main-tables-container{
+    display: flex;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: X proximity;
+    scroll-snap-align: center;
+}
 .main-currency-table{
     position: relative;
     gap: 50px;
@@ -149,7 +157,7 @@ main{
     min-width: 235px;
     max-width: 500px;
     height: 360px;
-    margin: 0 auto;
+    margin: 0 40px;
     font-family: "Inter", sans-serif;
 }
 .main-currency-table .currency-table-title{
@@ -174,6 +182,7 @@ main{
     max-width: 300px;
     height: 250px;
     margin: 0 auto;
+    scroll-snap-align: center;
 }
 .currency-table-container table{
     width: 100%;
@@ -381,6 +390,7 @@ main{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    margin-top: 30px;
 }
 .bitcoin-img-container h2{
     padding-top: 60px;
@@ -404,7 +414,7 @@ main{
     min-width: 288px;
     height: auto;
     margin: 0 auto;
-    }
+}
 .plans--title h2{
     padding-top: 50px;
     font-size: 2.4rem;
@@ -423,16 +433,24 @@ main{
     display: flex;
     height: 316px;
     overflow-x: scroll;
+    overflow-y: hidden;
     overscroll-behavior-x: contain;
     scroll-snap-type: X proximity;
+    scroll-snap-align: center;
     margin: 0 10px;
+}
+.plans-container--slider::-webkit-scrollbar {
+    background-color: var(--soft-orange);
+    height: 3px;
+}
+.plans-container--slider::-webkit-scrollbar-thumb {
+    background-color: var(--bitcoin-orange);
 }
 .plans-container--card{
     position: relative;
-    /* gap: 50px; */
     scroll-snap-align: center;
     width: 65%;
-    min-width: 230px;
+    min-width: 190px;
     max-width: 300px;
     height: 250px;
     margin: 50px 10px 0;
@@ -463,7 +481,7 @@ main{
     min-width: 230px;
     max-width: 300px;
     height: 250px;
-    margin: 50px 5px 0;
+    margin: 50px 10px 0;
     padding: 0 15px;
     background-color: var(--warm-black2);
     border-radius: 15px;
@@ -559,4 +577,30 @@ main{
     height: 20px;
     background-image: url('assets/iconos/fecla_derecha.svg');
     vertical-align: text-bottom;
+}
+footer{
+    display: flex;
+    width: 100%;
+    height: 150px;
+    background-color: var(--bitcoin-orange);
+}
+footer section{
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
+footer .left ul{
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    list-style: none;
+}
+.left li{
+    margin: 10px 0;
+    cursor: pointer;
+}
+.left a{
+    text-decoration: none;
+    color: var(--just-white);
 }
