--- a/style.css
+++ b/style.css
@@ -604,3 +604,22 @@ footer .left ul{
     text-decoration: none;
     color: var(--just-white);
 }
+
+@media (min-width: 900px){
+    .main-tables-container{
+        display: flex;
+        width: 930px;
+        margin: 0 auto;
+        overflow-x: unset;
+    }
+    .product-cards--container{
+        display: flex;
+        flex-wrap: wrap;
+        width: 930px;
+        margin: 0 auto;
+    }
+    .plans-container--slider{
+        justify-content: center;
+        overflow-x: unset;
+    }
+}
